--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,13 +3,15 @@
     <item
         android:id="@+id/search_fragment1"
         android:icon="@drawable/ic_baseline_search_24"
-        android:title="Поиск"/>
+        android:title="@string/search_title_menu" />
+
     <item
         android:id="@+id/my_recipes_fragment2"
-        android:icon="@drawable/ic_fire"
-        android:title="Мои рецепты"/>
+        android:icon="@drawable/ic_favorite_for_menu"
+        android:title="@string/my_recipes_title_menu" />
+
     <item
         android:id="@+id/profile_fragment3"
         android:icon="@drawable/ic_baseline_person_24"
-        android:title="Профиль"/>
+        android:title="@string/profile_title_menu" />
 </menu>
