--- a/app/src/main/res/layout/activity_full_recipe.xml
+++ b/app/src/main/res/layout/activity_full_recipe.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/back" />
 
     <TextView
-        android:id="@+id/tv_type_of_meals_tv"
+        android:id="@+id/type_of_meals_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/back_ibtn"
@@ -27,7 +27,7 @@
         android:id="@+id/title_for_recipe_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_type_of_meals_tv"
+        android:layout_below="@+id/type_of_meals_tv"
         android:layout_marginLeft="@dimen/middleMarginFromEdge"
         android:text="@string/french_toast_with_strawberries"
         android:textColor="@color/black"
@@ -56,9 +56,10 @@
         android:layout_below="@id/ratingBar_rb"
         android:layout_marginLeft="@dimen/middleMarginFromEdge"
         android:layout_marginTop="@dimen/miniMarginFromEdge"
-        android:src="@drawable/ic_watch"></ImageView>
+        android:src="@drawable/ic_watch"/>
 
     <TextView
+        android:id="@+id/time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ratingBar_rb"
@@ -74,9 +75,10 @@
         android:layout_below="@id/watch_iv"
         android:layout_marginLeft="@dimen/middleMarginFromEdge"
         android:layout_marginTop="@dimen/miniMarginFromEdge"
-        android:src="@drawable/ic_fire"></ImageView>
+        android:src="@drawable/ic_fire"/>
 
     <TextView
+        android:id="@+id/count_of_cal_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/watch_iv"
@@ -86,9 +88,10 @@
         android:textColor="@color/dark_grey" />
 
     <androidx.appcompat.widget.AppCompatCheckBox
+        android:id="@+id/isLike_cb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_type_of_meals_tv"
+        android:layout_below="@id/type_of_meals_tv"
         android:layout_marginLeft="90dp"
         android:layout_toRightOf="@id/title_for_recipe_tv"
         android:button="@drawable/favorite_selector" />
@@ -127,52 +130,52 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageButton
-                android:id="@+id/ingredient1_ibtn"
+            <ImageView
+                android:id="@+id/ingredient1_iv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
 
                 android:layout_marginLeft="@dimen/miniMarginFromEdge"
                 android:src="@drawable/ic_spoon" />
 
-            <ImageButton
-                android:id="@+id/ingredient2_ibtn"
+            <ImageView
+                android:id="@+id/ingredient2_iv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/miniMarginFromEdge"
-                android:layout_toRightOf="@id/ingredient1_ibtn"
+                android:layout_toRightOf="@id/ingredient1_iv"
                 android:src="@drawable/ic_butter" />
 
-            <ImageButton
-                android:id="@+id/ingredient3_ibtn"
+            <ImageView
+                android:id="@+id/ingredient3_iv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/miniMarginFromEdge"
-                android:layout_toRightOf="@id/ingredient2_ibtn"
+                android:layout_toRightOf="@id/ingredient2_iv"
                 android:src="@drawable/ic_eggs" />
 
-            <ImageButton
-                android:id="@+id/ingredient4_ibtn"
+            <ImageView
+                android:id="@+id/ingredient4_iv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/miniMarginFromEdge"
-                android:layout_toRightOf="@id/ingredient3_ibtn"
+                android:layout_toRightOf="@id/ingredient3_iv"
                 android:src="@drawable/ic_glasses" />
 
-            <ImageButton
-                android:id="@+id/ingredient5_ibtn"
+            <ImageView
+                android:id="@+id/ingredient5_iv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/miniMarginFromEdge"
-                android:layout_toRightOf="@id/ingredient4_ibtn"
+                android:layout_toRightOf="@id/ingredient4_iv"
                 android:src="@drawable/ic_strawberries" />
 
-            <ImageButton
-                android:id="@+id/ingredient6_ibtn"
+            <ImageView
+                android:id="@+id/ingredient6_iv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/miniMarginFromEdge"
-                android:layout_toRightOf="@id/ingredient5_ibtn"
+                android:layout_toRightOf="@id/ingredient5_iv"
                 android:src="@drawable/ic_berry" />
         </RelativeLayout>
     </HorizontalScrollView>
@@ -206,8 +209,7 @@
                 android:layout_marginLeft="@dimen/middleMarginFromEdge"
                 android:layout_marginTop="@dimen/miniMarginFromEdge"
                 android:text="@string/step_1"
-                android:textColor="@color/black"
-                />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/step_2_tv"
