--- a/app/src/main/res/layout/fragment_custom_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_custom_bottom_sheet.xml
@@ -75,7 +75,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/brunch_btn"
+                android:text="@string/brunch"
                 app:chipCornerRadius="10dp" />
 
             <com.google.android.material.chip.Chip
@@ -89,7 +89,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dinner_chip"
+                android:text="@string/dinner"
                 app:chipCornerRadius="10dp" />
 
         </com.google.android.material.chip.ChipGroup>
