--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -90,7 +90,7 @@
             app:startIconDrawable="@drawable/ic_password">
 
 
-            <com.google.android.material.textfield.TextInputEditText
+            }<com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_tiet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
