--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -51,7 +51,7 @@
         android:textStyle="bold" />
 
     <com.google.android.material.chip.ChipGroup
-        android:id="@+id/meals_cg"
+        android:id="@+id/meals1_cg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/type_of_meals_tv"
@@ -95,7 +95,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/meals_cg"
+        android:layout_below="@+id/meals1_cg"
         android:layout_marginLeft="@dimen/miniMarginFromEdge"
         android:layout_marginRight="@dimen/miniMarginFromEdge"
         android:background="@color/dark_grey" />
@@ -103,7 +103,7 @@
         android:id="@+id/type_of_dishes_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/meals_cg"
+        android:layout_below="@id/meals1_cg"
         android:layout_marginLeft="@dimen/miniMarginFromEdge"
         android:layout_marginTop="@dimen/miniMarginFromEdge"
         android:text="@string/dish_title"
@@ -112,7 +112,7 @@
         android:textStyle="bold" />
 
     <com.google.android.material.chip.ChipGroup
-        android:id="@+id/dishes_cg"
+        android:id="@+id/dishes1_cg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/type_of_dishes_tv"
@@ -177,15 +177,16 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/dishes_cg"
+        android:layout_below="@+id/dishes1_cg"
         android:layout_marginLeft="@dimen/miniMarginFromEdge"
         android:layout_marginRight="@dimen/miniMarginFromEdge"
         android:background="@color/dark_grey" />
+
     <TextView
         android:id="@+id/count_of_meals_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dishes_cg"
+        android:layout_below="@id/dishes1_cg"
         android:layout_marginLeft="@dimen/miniMarginFromEdge"
         android:layout_marginTop="@dimen/miniMarginFromEdge"
         android:text="@string/number_of_servings_sb"
